[gd_scene load_steps=7 format=3 uid="uid://b8lpuwfgqi0p4"]

[ext_resource type="Script" path="res://util/ui.gd" id="1_t656y"]
[ext_resource type="Texture2D" uid="uid://blaxpljaaej30" path="res://assets/sprites/ui/batterybigempty.png" id="2_7ynog"]
[ext_resource type="Theme" uid="uid://b45jfhmer1vsa" path="res://assets/theme.tres" id="2_c7sa8"]
[ext_resource type="Texture2D" uid="uid://daef0b67orkfk" path="res://assets/sprites/ui/batterybigfull.png" id="3_bx5vb"]
[ext_resource type="FontFile" uid="uid://cfjynyb05tw4p" path="res://assets/fonts/m3x6.ttf" id="5_oj4ng"]

[sub_resource type="LabelSettings" id="LabelSettings_f3t50"]
font_size = 31
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_t656y")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="EnergyBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0.116667, 1)
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
fill_mode = 1
texture_under = ExtResource("2_7ynog")
texture_progress = ExtResource("3_bx5vb")
texture_progress_offset = Vector2(5, 4)

[node name="PercentageLabel" type="Label" parent="MarginContainer/VBoxContainer/EnergyBar"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 64.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("5_oj4ng")
theme_override_font_sizes/font_size = 31
text = "100%"
label_settings = SubResource("LabelSettings_f3t50")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_c7sa8")
theme_override_font_sizes/font_size = 28
text = "0:00.000"

[node name="LowEnergyFlashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="LowEnergyFlashTimer" to="." method="_on_low_energy_flash_timer_timeout"]
